--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -18,11 +18,11 @@ import "../../styles/About.less";
 	<section class="vh-container">
 		<section class="vh-about vh-animation vh-animation-init">
 			<header class="vh-page-header">
-				<h1>关于我</h1>
+				<h1>关于本大帅哥</h1>
 				<p>Hi there, I’m Han 👋</p>
 			</header>
 			<main>
-				<p>我是一名热爱前端开发并拥有丰富经验的工程师，喜欢探索新技术并应用于实际项目中。 我始终保持对新技术的热情，并将我的知识与经验分享在我的博客中。我期待在这里与你分享我的见解、经验和最新的技术动态。</p>
+				<p>我是一名热爱前端开发并拥有丰富经验的且屠宰，喜欢探索新技术并应用于实际项目中。 我始终保持对新技术的热情，并将我的知识与经验分享在我的博客中。我期待在这里与你分享我的见解、经验和最新的技术动态。</p>
 				<h3>🌟 Languages and Tools</h3>
 				<div class="language-tool">
 					<a href="https://www.w3.org/html/" target="_blank" rel="noopener nofollow"><Image width="1" height="1" src="/assets/images/lazy-loading.webp" data-vh-lz-src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5" /></a>
